[project]
name = "census-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "geopandas>=1.1.4",
    "requests>=2.34.2",
]

[project.scripts]
languages = "census_stats.bin.languages:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/census_stats"]
